# SPDX-FileCopyrightText: 2023 Mark Liffiton <liffiton@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-only

[project]
name = 'Gen-Ed'
description = "A framework for building web applications using generative AI (LLMs) for education."
version = '0.1.0'
authors = [
    { name='Mark Liffiton', email='liffiton@gmail.com' }
]
readme = 'README.md'
requires-python = '>=3.10'

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "Authlib~=1.3.0",
    "Flask~=3.0.0",
    "markdown-it-py~=3.0.0",
    "openai~=1.0, >=1.26",
    "pylti@git+https://github.com/liffiton/pylti",
    "python-dotenv~=1.0.0",
    "python-frontmatter~=1.1.0",
    "pytz",
]

[project.optional-dependencies]
test = [
    "coverage~=7.0",
    "oauthlib~=3.2.2",
    "pytest~=8.0",
    "pytest-cov~=4.1.0",
    "pytest-xdist~=3.5.0",
    "mypy",
    "types-colorama",
    "types-pytz",
    "types-requests",
]


[tool.pytest.ini_options]
log_level = 'DEBUG'
testpaths = 'tests'
addopts = [
    "--import-mode=importlib",
    "-n=auto",
]
markers = [
    "use_real_openai: marks any test that sends requests to the real OpenAI endpoint",
]


[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # line too long
    "COM812", # missing trailing comma
    "ERA001", # commented-out code
    "RET504", # unnecessary assignment before return
    "RET505", # unnecessary else after return
    "S101",   # assert statements
    "S311",   # pseudo-random number generators
    "T20",    # Flake8-print (print statements)
    "TRY400", # logger.error() inside except block
    "G004",   # f-string in logging statement
    "EM",     # Exceptions with string literals
    "Q",      # string quoting
    "D",      # docstrings
    "ANN",    # type annotation
    "TD",     # TODOs
]

[tool.mypy]
files = [ "src/**/*.py" ]
strict = "True"
pretty = "True"
